# PKUElective2024Autumn

./: .gitignore  README.md  apikey.sample.json  main.py  pyproject.toml  requirements.txt  test_api.py
autoelective/: cli.py  loop.py
autoelective/captcha/: captcha.py  online.py  proxy.py
