[project]
name = "pkuelective2023autumn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<=3.9"
dependencies = [
    "requests",
    "numpy",
    "pillow",
    "aiohttp",
    "lxml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
index-url = "https://mirrors.pku.edu.cn/pypi/web/simple"
